adds category field4
